# patent_search_engine

./: .gitignore  Dockerfile  README.md  engine.py  exp.ipynb  hello.py  main.py  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/patent_retrieval/: exp.ipynb
backend/tests/: test_patent_retrieval_engine.py
notebooks/: exp.ipynb
src/: engine.py  exp.ipynb  main.py  threshold.py
src/patent_retrieval/: config.json  engine.py  exp.ipynb  main.py
